# binary_resource

./: .gitmodules  binary_resource.cmake
bin2c/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp  main_src.cpp  main_src.h  main_src.hpp
